# lineageguard

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  PROJECT_PROVENANCE.md  README.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: ci.yml
config/: risk-policy.yaml  structured-properties.yaml
demo/acme_dbt/: README.md  dbt_project.yml  profiles.yml
demo/acme_dbt/models/marts/: fct_daily_revenue.sql  schema.yml
demo/acme_dbt/models/staging/: schema.yml  stg_orders.sql
demo/acme_dbt/scenario/proposed/models/staging/: schema.yml  stg_orders.sql
demo/acme_dbt/seeds/: orders.csv  schema.yml
demo/acme_dbt/tests/: assert_completed_orders_have_positive_totals.sql  assert_daily_revenue_reconciles.sql
deploy/: Dockerfile  README.md
docs/: architecture.md  demo-runbook.md  demo-script.txt  demo-storyboard.md  deployment.md  devpost-draft.txt  judging-map.md  security.md  submission-checklist.md
docs/research/: datahub-capability-matrix.md  hackathon-rules.md
docs/upstream/: mcp-lineage-pagination-repro.md
scripts/: create-local-token.py  datahub-preflight.sh  datahub-quickstart.py  datahub-up.sh  demo.sh  seed-datahub-demo.py  verify-release.py
src/lineageguard/: __init__.py  agent.py  cli.py  config.py  demo.py  models.py  reporting.py  run_models.py
src/lineageguard/changes/: __init__.py  parser.py
src/lineageguard/datahub/: __init__.py  context.py  demo_seed.py  graphql.py  mcp_client.py  quickstart.py  token.py  writeback.py
src/lineageguard/remediation/: __init__.py  counterfactual.py  generator.py  verifier.py
src/lineageguard/review_ui/: __init__.py  app.py
src/lineageguard/review_ui/static/: index.html  review.css  review.js
src/lineageguard/risk/: __init__.py  engine.py  policy.py
tasks/: lessons.md  todo.md
tests/datahub/: test_live_demo.py
tests/fixtures/change_detection/: manifest_after.json  manifest_ambiguous_after.json  manifest_ambiguous_before.json  manifest_before.json
tests/integration/: test_demo_dbt.py  test_demo_preparation.py  test_remediation_e2e.py
tests/unit/: test_agent.py  test_change_parser.py  test_cli.py  test_config.py  test_datahub_context.py  test_datahub_demo_seed.py  test_datahub_graphql.py  test_datahub_quickstart.py  test_datahub_token.py  test_datahub_writeback.py  test_demo.py  test_mcp_client.py  test_remediation_counterfactual.py  test_remediation_generator.py  test_remediation_verifier.py  test_reporting.py  test_review_ui.py  test_risk_engine.py  test_structured_properties_config.py  test_verify_release.py
